fixed overflow issue on message body

--- a/web/app/assets/stylesheets/application.bootstrap.scss
+++ b/web/app/assets/stylesheets/application.bootstrap.scss
@@ -20,8 +20,5 @@
 
 #message-body {
     
-    inline-size: min-content;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-
+   
 }
